--- a/r_style.css
+++ b/r_style.css
@@ -11,6 +11,7 @@ li:hover{background-color: rgb(255, 241, 229);}
 h2 {
   background-color: rgb(151, 194, 255);
   color: white;
+  text-align: center;
 }
 
 h1 {
@@ -24,4 +25,20 @@ h1 {
 
 .appear{
   border: 20px solid;
+}
+
+div{
+  display: inline-block;
+  text-align: center;
+}
+
+table {
+  margin: 5px;
+  width: 100%;
+  table-layout: fixed;
+}
+
+p {
+  color: lightgray;
+  font-size: 70%;
 }
